Protection_mode and Control loop inserted

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,5 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    https://github.com/adafruit/Adafruit-MLX90614-Library.git
-    SPI
+	https://github.com/adafruit/Adafruit-MLX90614-Library.git
+	SPI
+	paulstoffregen/OneWire@^2.3.8
+	milesburton/DallasTemperature@^3.11.0
